--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,6 +31,7 @@
 			"error",
 			"never"
 		],
-		"import/no-cycle": "off"
+		"import/no-cycle": "off",
+		"jsx-a11y/label-has-associated-control": "off"
 	}
 }
